// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:input table 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
                  data-amis-name="table"
                  data-role="form-item"
                >
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__InputTable __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
                  >
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__Table"
                      style="--Table-thead-height: 0px; --Table-column-3-width: 0px; --Table-column-4-width: 0px;"
                    >
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Table-contentWrap"
                      >
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Table-content"
                        >
                          <table
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Table-table"
                          >
                            <colgroup>
                              <col
                                data-index="3"
                              />
                              <col
                                data-index="4"
                              />
                            </colgroup>
                            <thead>
                              <tr
                                class=""
                              >
                                <th
                                  class=""
                                  data-index="3"
                                >
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__TableCell--title"
                                  >
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                                    >
                                      <span>
                                        A
                                      </span>
                                    </span>
                                  </div>
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                                    data-index="3"
                                  />
                                </th>
                                <th
                                  class=""
                                  data-index="4"
                                >
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__TableCell--title"
                                  >
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                                    >
                                      <span>
                                        B
                                      </span>
                                    </span>
                                  </div>
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                                    data-index="4"
                                  />
                                </th>
                              </tr>
                            </thead>
                            <tbody>
                              <tr
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Table-table-tr __AMIS_COMPONENT_CLASS_PREFIX__Table-tr--odd __AMIS_COMPONENT_CLASS_PREFIX__Table-tr--1th"
                                data-id="1"
                                data-index="0"
                              >
                                <td
                                  class=""
                                >
                                  <span
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                                  >
                                    a1
                                  </span>
                                </td>
                                <td
                                  class=""
                                >
                                  <span
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                                  >
                                    b1
                                  </span>
                                </td>
                              </tr>
                              <tr
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Table-table-tr __AMIS_COMPONENT_CLASS_PREFIX__Table-tr--even __AMIS_COMPONENT_CLASS_PREFIX__Table-tr--1th"
                                data-id="2"
                                data-index="1"
                              >
                                <td
                                  class=""
                                >
                                  <span
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                                  >
                                    a2
                                  </span>
                                </td>
                                <td
                                  class=""
                                >
                                  <span
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                                  >
                                    b2
                                  </span>
                                </td>
                              </tr>
                              <tr
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Table-table-tr __AMIS_COMPONENT_CLASS_PREFIX__Table-tr--odd __AMIS_COMPONENT_CLASS_PREFIX__Table-tr--1th"
                                data-id="3"
                                data-index="2"
                              >
                                <td
                                  class=""
                                >
                                  <span
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                                  >
                                    a3
                                  </span>
                                </td>
                                <td
                                  class=""
                                >
                                  <span
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                                  >
                                    b3
                                  </span>
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    提交
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:input table add 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__JsonField __AMIS_COMPONENT_CLASS_PREFIX__Form--debug"
        >
          <div
            class="w-json-view-container w-rjv  w-rjv-inner"
            style="line-height: 1.4; font-family: var(--w-rjv-font-family, Menlo, monospace); font-size: 13px; --w-rjv-font-family: monospace; --w-rjv-color: #002b36; --w-rjv-background-color: #ffffff; --w-rjv-line-color: #ebebeb; --w-rjv-arrow-color: var(--w-rjv-color); --w-rjv-edit-color: var(--w-rjv-color); --w-rjv-info-color: #0000004d; --w-rjv-update-color: #ebcb8b; --w-rjv-copied-color: #002b36; --w-rjv-copied-success-color: #28a745; --w-rjv-curlybraces-color: #236a7c; --w-rjv-colon-color: #002b36; --w-rjv-brackets-color: #236a7c; --w-rjv-type-string-color: #cb4b16; --w-rjv-type-int-color: #268bd2; --w-rjv-type-float-color: #859900; --w-rjv-type-bigint-color: #268bd2; --w-rjv-type-boolean-color: #2aa198; --w-rjv-type-date-color: #586e75; --w-rjv-type-url-color: #0969da; --w-rjv-type-null-color: #d33682; --w-rjv-type-nan-color: #859900; --w-rjv-type-undefined-color: #586e75;"
          >
            <div
              style="display: inline-flex; align-items: center;"
            >
              <svg
                class="w-rjv-arrow"
                data-expand="true"
                data-icon-style="square"
                fill="none"
                style="cursor: pointer; height: 1em; width: 1em; transform: rotate(0deg); transition: all 0.3s;"
                viewBox="0 0 24 24"
              >
                <rect
                  fill="none"
                  height="14"
                  rx="1.5"
                  stroke="currentColor"
                  stroke-width="1.8"
                  width="14"
                  x="5"
                  y="5"
                />
                <path
                  d="M8 12h8"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="1.8"
                />
              </svg>
              <span
                class="w-rjv-curlybraces-start "
              >
                {
              </span>
              <span
                class="w-rjv-object-size"
                style="padding-left: 4px; font-style: italic;"
              >
                0

                items
              </span>
            </div>
            <div
              class="w-rjv-content"
              style="margin-left: 6px;"
            />
            <div
              style="padding-left: 2px;"
            >
              <span
                class="w-rjv-curlybraces-end "
                style="padding-left: 2px; display: inline-block;"
              >
                }
              </span>
            </div>
          </div>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="table"
          data-role="form-item"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__InputTable __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Table"
              style="--Table-thead-height: 0px; --Table-column-3-width: 0px; --Table-column-4-width: 0px; --Table-column-5-width: 0px;"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Table-contentWrap"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Table-content"
                >
                  <table
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Table-table"
                  >
                    <colgroup>
                      <col
                        data-index="3"
                      />
                      <col
                        data-index="4"
                      />
                      <col
                        data-index="5"
                        style="width: 150px; min-width: 150px;"
                      />
                    </colgroup>
                    <thead>
                      <tr
                        class=""
                      >
                        <th
                          class=""
                          data-index="3"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__TableCell--title"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                A
                              </span>
                            </span>
                          </div>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                            data-index="3"
                          />
                        </th>
                        <th
                          class=""
                          data-index="4"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__TableCell--title"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                B
                              </span>
                            </span>
                          </div>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                            data-index="4"
                          />
                        </th>
                        <th
                          class="is-sticky is-sticky-right is-sticky-first-right __AMIS_COMPONENT_CLASS_PREFIX__Table-operationCell"
                          data-index="5"
                          style="width: 150px; min-width: 150px;"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__TableCell--title v-middle nowrap"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                操作
                              </span>
                            </span>
                          </div>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                            data-index="5"
                          />
                        </th>
                      </tr>
                    </thead>
                    <tbody>
                      <tr
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Table-table-tr __AMIS_COMPONENT_CLASS_PREFIX__Table-tr--odd __AMIS_COMPONENT_CLASS_PREFIX__Table-tr--1th"
                        data-id="1"
                        data-index="0"
                      >
                        <td
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Field--quickEditable"
                          tabindex="0"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
                            data-amis-name="a"
                            data-role="form-item"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
                            >
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
                              >
                                <input
                                  autocomplete="off"
                                  class=""
                                  name="a"
                                  placeholder=""
                                  size="10"
                                  type="text"
                                  value="aa"
                                />
                              </div>
                            </div>
                          </div>
                        </td>
                        <td
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Field--quickEditable"
                          tabindex="0"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
                            data-amis-name="b"
                            data-role="form-item"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
                            >
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
                              >
                                <input
                                  autocomplete="off"
                                  class=""
                                  name="b"
                                  placeholder=""
                                  size="10"
                                  type="text"
                                  value="bb"
                                />
                              </div>
                            </div>
                          </div>
                        </td>
                        <td
                          class="v-middle nowrap is-sticky is-sticky-right is-sticky-first-right"
                          style="right: 0px;"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__OperationField m-n"
                          >
                            <button
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--link __AMIS_COMPONENT_CLASS_PREFIX__Button--size-sm"
                              type="button"
                            >
                              <icon-mock
                                class="icon icon-check"
                                icon="check"
                              />
                            </button>
                            <button
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--link __AMIS_COMPONENT_CLASS_PREFIX__Button--size-sm"
                              type="button"
                            >
                              <icon-mock
                                class="icon icon-close"
                                icon="close"
                              />
                            </button>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__InputTable-toolbar"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-sm is-disabled"
                disabled=""
              >
                <i
                  class="fa fa-plus __AMIS_COMPONENT_CLASS_PREFIX__Button-icon fa fa-plus"
                />
                <span>
                  新增
                </span>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:input-table cell selects delete 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="table"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  Table
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__InputTable __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Table"
              style="--Table-thead-height: 0px; --Table-column-3-width: 0px; --Table-column-4-width: 0px;"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Table-contentWrap"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Table-content"
                >
                  <table
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Table-table"
                  >
                    <colgroup>
                      <col
                        data-index="3"
                      />
                      <col
                        data-index="4"
                      />
                    </colgroup>
                    <thead>
                      <tr
                        class=""
                      >
                        <th
                          class=""
                          data-index="3"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__TableCell--title"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                选项
                              </span>
                            </span>
                          </div>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                            data-index="3"
                          />
                        </th>
                        <th
                          class=""
                          data-index="4"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__TableCell--title"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                普通文本
                              </span>
                            </span>
                          </div>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                            data-index="4"
                          />
                        </th>
                      </tr>
                    </thead>
                    <tbody>
                      <tr
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Table-table-tr __AMIS_COMPONENT_CLASS_PREFIX__Table-tr--odd __AMIS_COMPONENT_CLASS_PREFIX__Table-tr--1th"
                        data-id="1"
                        data-index="0"
                      >
                        <td
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Field--quickEditable"
                          tabindex="0"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
                            data-amis-name="select"
                            data-role="form-item"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__SelectControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
                            >
                              <div
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select __AMIS_COMPONENT_CLASS_PREFIX__Select--multi"
                                role="combobox"
                                tabindex="0"
                              >
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__Select-valueWrap"
                                >
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__Select-value"
                                  >
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__Select-valueLabel"
                                    >
                                      s2
                                    </span>
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__Select-valueIcon"
                                    >
                                      <icon-mock
                                        class="icon icon-close"
                                        icon="close"
                                      />
                                    </span>
                                  </div>
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__Select-value"
                                  >
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__Select-valueLabel"
                                    >
                                      s3
                                    </span>
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__Select-valueIcon"
                                    >
                                      <icon-mock
                                        class="icon icon-close"
                                        icon="close"
                                      />
                                    </span>
                                  </div>
                                </div>
                                <span
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__Select-arrow"
                                >
                                  <icon-mock
                                    class="icon icon-right-arrow-bold"
                                    icon="right-arrow-bold"
                                  />
                                </span>
                              </div>
                            </div>
                          </div>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            <span
                              class="text-muted"
                            >
                              -
                            </span>
                          </span>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            submitBtn
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:input-table init display 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="aaa"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  数字
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__NumberControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Number __AMIS_COMPONENT_CLASS_PREFIX__Number--borderFull"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-wrap"
              >
                <span
                  aria-disabled="false"
                  aria-label="Increase Value"
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up"
                  role="button"
                  unselectable="on"
                >
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up-inner"
                    unselectable="on"
                  />
                </span>
                <span
                  aria-disabled="false"
                  aria-label="Decrease Value"
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down"
                  role="button"
                  unselectable="on"
                >
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down-inner"
                    unselectable="on"
                  />
                </span>
              </div>
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input-wrap"
              >
                <input
                  aria-valuenow="0"
                  autocomplete="off"
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input"
                  name="aaa"
                  role="spinbutton"
                  step="1"
                  value="0"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="tableList"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  表格表单
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__InputTable __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Table"
              style="--Table-thead-height: 0px; --Table-column-3-width: 0px; --Table-column-4-width: 0px; --Table-column-5-width: 0px; --Table-column-6-width: 0px;"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Table-contentWrap"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Table-content"
                >
                  <table
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Table-table"
                  >
                    <colgroup>
                      <col
                        data-index="3"
                      />
                      <col
                        data-index="4"
                      />
                      <col
                        data-index="5"
                      />
                      <col
                        data-index="6"
                      />
                    </colgroup>
                    <thead>
                      <tr
                        class=""
                      >
                        <th
                          class=""
                          data-index="3"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__TableCell--title"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                名称
                              </span>
                            </span>
                          </div>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                            data-index="3"
                          />
                        </th>
                        <th
                          class=""
                          data-index="4"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__TableCell--title"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                分数
                              </span>
                            </span>
                          </div>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                            data-index="4"
                          />
                        </th>
                        <th
                          class=""
                          data-index="5"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__TableCell--title"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                分数(不在quickEdit里面)
                              </span>
                            </span>
                          </div>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                            data-index="5"
                          />
                        </th>
                        <th
                          class=""
                          data-index="6"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__TableCell--title"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                等级
                              </span>
                            </span>
                          </div>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                            data-index="6"
                          />
                        </th>
                      </tr>
                    </thead>
                    <tbody>
                      <tr
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Table-table-tr __AMIS_COMPONENT_CLASS_PREFIX__Table-tr--odd __AMIS_COMPONENT_CLASS_PREFIX__Table-tr--1th"
                        data-id="1"
                        data-index="0"
                      >
                        <td
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Field--quickEditable"
                          tabindex="0"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
                            data-amis-name="name"
                            data-role="form-item"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
                            >
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
                              >
                                <input
                                  autocomplete="off"
                                  class=""
                                  name="name"
                                  placeholder=""
                                  size="10"
                                  type="text"
                                  value="AAA"
                                />
                              </div>
                            </div>
                          </div>
                        </td>
                        <td
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Field--quickEditable"
                          tabindex="0"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
                            data-amis-name="score"
                            data-role="form-item"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__NumberControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
                            >
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Number no-steps __AMIS_COMPONENT_CLASS_PREFIX__Number--borderFull"
                              >
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-wrap"
                                >
                                  <span
                                    aria-disabled="false"
                                    aria-label="Increase Value"
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up"
                                    role="button"
                                    unselectable="on"
                                  >
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up-inner"
                                      unselectable="on"
                                    />
                                  </span>
                                  <span
                                    aria-disabled="false"
                                    aria-label="Decrease Value"
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down"
                                    role="button"
                                    unselectable="on"
                                  >
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down-inner"
                                      unselectable="on"
                                    />
                                  </span>
                                </div>
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input-wrap"
                                >
                                  <input
                                    aria-valuenow="234"
                                    autocomplete="off"
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input"
                                    name="score"
                                    role="spinbutton"
                                    step="1"
                                    value="234"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </td>
                        <td
                          class=""
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__NumberControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Number no-steps __AMIS_COMPONENT_CLASS_PREFIX__Number--borderFull"
                            >
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-wrap"
                              >
                                <span
                                  aria-disabled="false"
                                  aria-label="Increase Value"
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up"
                                  role="button"
                                  unselectable="on"
                                >
                                  <span
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up-inner"
                                    unselectable="on"
                                  />
                                </span>
                                <span
                                  aria-disabled="false"
                                  aria-label="Decrease Value"
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down"
                                  role="button"
                                  unselectable="on"
                                >
                                  <span
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down-inner"
                                    unselectable="on"
                                  />
                                </span>
                              </div>
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input-wrap"
                              >
                                <input
                                  aria-valuenow="234"
                                  autocomplete="off"
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input"
                                  name="score"
                                  role="spinbutton"
                                  step="1"
                                  value="234"
                                />
                              </div>
                            </div>
                          </div>
                        </td>
                        <td
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Field--quickEditable"
                          tabindex="0"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
                            data-amis-name="level"
                            data-role="form-item"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__NumberControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
                            >
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Number no-steps __AMIS_COMPONENT_CLASS_PREFIX__Number--borderFull"
                              >
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-wrap"
                                >
                                  <span
                                    aria-disabled="false"
                                    aria-label="Increase Value"
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up"
                                    role="button"
                                    unselectable="on"
                                  >
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up-inner"
                                      unselectable="on"
                                    />
                                  </span>
                                  <span
                                    aria-disabled="false"
                                    aria-label="Decrease Value"
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down"
                                    role="button"
                                    unselectable="on"
                                  >
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down-inner"
                                      unselectable="on"
                                    />
                                  </span>
                                </div>
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input-wrap"
                                >
                                  <input
                                    aria-valuenow="1"
                                    autocomplete="off"
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input"
                                    name="level"
                                    role="spinbutton"
                                    step="1"
                                    value="1"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Table-table-tr __AMIS_COMPONENT_CLASS_PREFIX__Table-tr--even __AMIS_COMPONENT_CLASS_PREFIX__Table-tr--1th"
                        data-id="2"
                        data-index="1"
                      >
                        <td
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Field--quickEditable"
                          tabindex="0"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
                            data-amis-name="name"
                            data-role="form-item"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
                            >
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
                              >
                                <input
                                  autocomplete="off"
                                  class=""
                                  name="name"
                                  placeholder=""
                                  size="10"
                                  type="text"
                                  value="BBB"
                                />
                              </div>
                            </div>
                          </div>
                        </td>
                        <td
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Field--quickEditable"
                          tabindex="0"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
                            data-amis-name="score"
                            data-role="form-item"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__NumberControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
                            >
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Number no-steps __AMIS_COMPONENT_CLASS_PREFIX__Number--borderFull"
                              >
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-wrap"
                                >
                                  <span
                                    aria-disabled="false"
                                    aria-label="Increase Value"
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up"
                                    role="button"
                                    unselectable="on"
                                  >
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up-inner"
                                      unselectable="on"
                                    />
                                  </span>
                                  <span
                                    aria-disabled="false"
                                    aria-label="Decrease Value"
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down"
                                    role="button"
                                    unselectable="on"
                                  >
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down-inner"
                                      unselectable="on"
                                    />
                                  </span>
                                </div>
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input-wrap"
                                >
                                  <input
                                    aria-valuenow="0"
                                    autocomplete="off"
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input"
                                    name="score"
                                    role="spinbutton"
                                    step="1"
                                    value="0"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </td>
                        <td
                          class=""
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__NumberControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Number no-steps __AMIS_COMPONENT_CLASS_PREFIX__Number--borderFull"
                            >
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-wrap"
                              >
                                <span
                                  aria-disabled="false"
                                  aria-label="Increase Value"
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up"
                                  role="button"
                                  unselectable="on"
                                >
                                  <span
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up-inner"
                                    unselectable="on"
                                  />
                                </span>
                                <span
                                  aria-disabled="false"
                                  aria-label="Decrease Value"
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down"
                                  role="button"
                                  unselectable="on"
                                >
                                  <span
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down-inner"
                                    unselectable="on"
                                  />
                                </span>
                              </div>
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input-wrap"
                              >
                                <input
                                  aria-valuenow="0"
                                  autocomplete="off"
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input"
                                  name="score"
                                  role="spinbutton"
                                  step="1"
                                  value="0"
                                />
                              </div>
                            </div>
                          </div>
                        </td>
                        <td
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Field--quickEditable"
                          tabindex="0"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
                            data-amis-name="level"
                            data-role="form-item"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__NumberControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
                            >
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Number no-steps __AMIS_COMPONENT_CLASS_PREFIX__Number--borderFull"
                              >
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-wrap"
                                >
                                  <span
                                    aria-disabled="false"
                                    aria-label="Increase Value"
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up"
                                    role="button"
                                    unselectable="on"
                                  >
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up-inner"
                                      unselectable="on"
                                    />
                                  </span>
                                  <span
                                    aria-disabled="false"
                                    aria-label="Decrease Value"
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down"
                                    role="button"
                                    unselectable="on"
                                  >
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down-inner"
                                      unselectable="on"
                                    />
                                  </span>
                                </div>
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input-wrap"
                                >
                                  <input
                                    aria-valuenow="0"
                                    autocomplete="off"
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input"
                                    name="level"
                                    role="spinbutton"
                                    step="1"
                                    value="0"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:input-table verifty 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="table"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  Table
                </span>
              </span>
            </span>
          </label>
        </div>
      </form>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            submitBtn
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:input-table with combo column 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="table"
          data-role="form-item"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__InputTable __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Table"
              style="--Table-thead-height: 0px; --Table-column-3-width: 0px;"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Table-contentWrap"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Table-content"
                >
                  <table
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Table-table"
                  >
                    <colgroup>
                      <col
                        data-index="3"
                      />
                    </colgroup>
                    <thead>
                      <tr
                        class=""
                      >
                        <th
                          class=""
                          data-index="3"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__TableCell--title"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                combo column
                              </span>
                            </span>
                          </div>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                            data-index="3"
                          />
                        </th>
                      </tr>
                    </thead>
                    <tbody>
                      <tr
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Table-table-tr __AMIS_COMPONENT_CLASS_PREFIX__Table-tr--odd __AMIS_COMPONENT_CLASS_PREFIX__Table-tr--1th"
                        data-id="1"
                        data-index="0"
                      >
                        <td
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Field--quickEditable"
                          tabindex="0"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
                            data-amis-name="q1"
                            data-role="form-item"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__ComboControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
                            >
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Combo __AMIS_COMPONENT_CLASS_PREFIX__Combo--single __AMIS_COMPONENT_CLASS_PREFIX__Combo--hor"
                              >
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-item"
                                >
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-itemInner"
                                  >
                                    <div
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--row __AMIS_COMPONENT_CLASS_PREFIX__Combo-form"
                                      novalidate=""
                                    >
                                      <input
                                        style="display: none;"
                                        type="submit"
                                      />
                                      <div
                                        class="__AMIS_COMPONENT_CLASS_PREFIX__Form-row"
                                      >
                                        <div
                                          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-col"
                                          style="flex: 1;"
                                        >
                                          <div
                                            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--row"
                                            data-amis-name="score"
                                            data-role="form-item"
                                          >
                                            <div
                                              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-rowInner"
                                            >
                                              <div
                                                class="__AMIS_COMPONENT_CLASS_PREFIX__NumberControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
                                              >
                                                <div
                                                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number __AMIS_COMPONENT_CLASS_PREFIX__Number--borderFull"
                                                >
                                                  <div
                                                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-wrap"
                                                  >
                                                    <span
                                                      aria-disabled="false"
                                                      aria-label="Increase Value"
                                                      class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up"
                                                      role="button"
                                                      unselectable="on"
                                                    >
                                                      <span
                                                        class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up-inner"
                                                        unselectable="on"
                                                      />
                                                    </span>
                                                    <span
                                                      aria-disabled="false"
                                                      aria-label="Decrease Value"
                                                      class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down"
                                                      role="button"
                                                      unselectable="on"
                                                    >
                                                      <span
                                                        class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down-inner"
                                                        unselectable="on"
                                                      />
                                                    </span>
                                                  </div>
                                                  <div
                                                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input-wrap"
                                                  >
                                                    <input
                                                      aria-valuenow="88"
                                                      autocomplete="off"
                                                      class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input"
                                                      name="score"
                                                      placeholder="请手动输入分数"
                                                      role="spinbutton"
                                                      step="1"
                                                      value="88"
                                                    />
                                                  </div>
                                                </div>
                                              </div>
                                            </div>
                                          </div>
                                        </div>
                                        <div
                                          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-col"
                                          style="flex: 1;"
                                        >
                                          <div
                                            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--row"
                                            data-amis-name="comment"
                                            data-role="form-item"
                                          >
                                            <div
                                              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-rowInner"
                                            >
                                              <div
                                                class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
                                              >
                                                <div
                                                  class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
                                                >
                                                  <input
                                                    autocomplete="off"
                                                    class=""
                                                    name="comment"
                                                    placeholder="请手动输入意见"
                                                    size="10"
                                                    type="text"
                                                    value="this is comment msg!!"
                                                  />
                                                </div>
                                              </div>
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            SubmitBtn
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
